--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,17 @@
 
 .panel-header {
   font-weight: bold;
+  align-content: center;
+}
+
+.product-table {
+  align-content: center;
+  width: 40%;
+}
+
+.product-table td {
+  text-align: left;
+  padding-left: 5px;
 }
 
 @keyframes App-logo-spin {
